force-app/main/default/objects/User__x/User__x.object-meta.xml
<CustomObject>
    <externalDataSource>X123</externalDataSource>
    <externalName>User</externalName>
    <label>User</label>
    <pluralLabel>Users</pluralLabel>
</CustomObject>