force-app/main/default/objects/User__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Account ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <referenceTo>EDS_Account__x</referenceTo>
    <relationshipName>Users</relationshipName>
    <type>ExternalLookup</type>
</CustomField>