force-app/main/default/objects/User__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <referenceTo>User__x</referenceTo>
    <relationshipName>Users</relationshipName>
    <type>ExternalLookup</type>
</CustomField>