force-app/main/default/objects/User__x/fields/JigsawImportLimitOverride__c.field-meta.xml
<CustomField>
    <fullName>JigsawImportLimitOverride__c</fullName>
    <externalDeveloperName>JigsawImportLimitOverride</externalDeveloperName>
    <label>Data.com Monthly Addition Limit</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>