force-app/main/default/objects/User__x/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <externalDeveloperName>LocaleSidKey</externalDeveloperName>
    <label>Locale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>af_ZA</fullName>
                <label>Afrikaans (South Africa)</label>
            </value>
            <value>
                <fullName>sq_AL</fullName>
                <label>Albanian (Albania)</label>
            </value>
            <value>
                <fullName>am_ET</fullName>
                <label>Amharic (Ethiopia)</label>
            </value>
            <value>
                <fullName>ar_DZ</fullName>
                <label>Arabic (Algeria)</label>
            </value>
            <value>
                <fullName>ar_BH</fullName>
                <label>Arabic (Bahrain)</label>
            </value>
            <value>
                <fullName>ar_EG</fullName>
                <label>Arabic (Egypt)</label>
            </value>
            <value>
                <fullName>ar_IQ</fullName>
                <label>Arabic (Iraq)</label>
            </value>
            <value>
                <fullName>ar_JO</fullName>
                <label>Arabic (Jordan)</label>
            </value>
            <value>
                <fullName>ar_KW</fullName>
                <label>Arabic (Kuwait)</label>
            </value>
            <value>
                <fullName>ar_LB</fullName>
                <label>Arabic (Lebanon)</label>
            </value>
            <value>
                <fullName>ar_LY</fullName>
                <label>Arabic (Libya)</label>
            </value>
            <value>
                <fullName>ar_MA</fullName>
                <label>Arabic (Morocco)</label>
            </value>
            <value>
                <fullName>ar_OM</fullName>
                <label>Arabic (Oman)</label>
            </value>
            <value>
                <fullName>ar_QA</fullName>
                <label>Arabic (Qatar)</label>
            </value>
            <value>
                <fullName>ar_SA</fullName>
                <label>Arabic (Saudi Arabia)</label>
            </value>
            <value>
                <fullName>ar_SD</fullName>
                <label>Arabic (Sudan)</label>
            </value>
            <value>
                <fullName>ar_SY</fullName>
                <label>Arabic (Syria)</label>
            </value>
            <value>
                <fullName>ar_TN</fullName>
                <label>Arabic (Tunisia)</label>
            </value>
            <value>
                <fullName>ar_AE</fullName>
                <label>Arabic (United Arab Emirates)</label>
            </value>
            <value>
                <fullName>ar_YE</fullName>
                <label>Arabic (Yemen)</label>
            </value>
            <value>
                <fullName>hy_AM</fullName>
                <label>Armenian (Armenia)</label>
            </value>
            <value>
                <fullName>az_AZ</fullName>
                <label>Azerbaijani (Azerbaijan)</label>
            </value>
            <value>
                <fullName>bn_BD</fullName>
                <label>Bangla (Bangladesh)</label>
            </value>
            <value>
                <fullName>bn_IN</fullName>
                <label>Bangla (India)</label>
            </value>
            <value>
                <fullName>eu_ES</fullName>
                <label>Basque (Spain)</label>
            </value>
            <value>
                <fullName>be_BY</fullName>
                <label>Belarusian (Belarus)</label>
            </value>
            <value>
                <fullName>bs_BA</fullName>
                <label>Bosnian (Bosnia &amp; Herzegovina)</label>
            </value>
            <value>
                <fullName>bg_BG</fullName>
                <label>Bulgarian (Bulgaria)</label>
            </value>
            <value>
                <fullName>my_MM</fullName>
                <label>Burmese (Myanmar (Burma))</label>
            </value>
            <value>
                <fullName>ca_ES</fullName>
                <label>Catalan (Spain)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>