force-app/main/default/objects/User__x/fields/ManagerId__c.field-meta.xml
<CustomField>
    <fullName>ManagerId__c</fullName>
    <externalDeveloperName>ManagerId</externalDeveloperName>
    <label>Manager ID</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipName>Users2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>