force-app/main/default/objects/User__x/fields/NumberOfFailedLogins__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFailedLogins__c</fullName>
    <externalDeveloperName>NumberOfFailedLogins</externalDeveloperName>
    <label>Failed Login Attempts</label>
    <precision>9</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>