force-app/main/default/objects/User__x/fields/TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSidKey__c</fullName>
    <externalDeveloperName>TimeZoneSidKey</externalDeveloperName>
    <label>Time Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pacific/Kiritimati</fullName>
                <label>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</label>
            </value>
            <value>
                <fullName>Pacific/Apia</fullName>
                <label>(GMT+13:00) Apia Standard Time (Pacific/Apia)</label>
            </value>
            <value>
                <fullName>Pacific/Enderbury</fullName>
                <label>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</label>
            </value>
            <value>
                <fullName>Pacific/Fakaofo</fullName>
                <label>(GMT+13:00) Tokelau Time (Pacific/Fakaofo)</label>
            </value>
            <value>
                <fullName>Pacific/Tongatapu</fullName>
                <label>(GMT+13:00) Tonga Standard Time (Pacific/Tongatapu)</label>
            </value>
            <value>
                <fullName>Pacific/Chatham</fullName>
                <label>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</label>
            </value>
            <value>
                <fullName>Antarctica/McMurdo</fullName>
                <label>(GMT+12:00) New Zealand Standard Time (Antarctica/McMurdo)</label>
            </value>
            <value>
                <fullName>Asia/Anadyr</fullName>
                <label>(GMT+12:00) Anadyr Standard Time (Asia/Anadyr)</label>
            </value>
            <value>
                <fullName>Asia/Kamchatka</fullName>
                <label>(GMT+12:00) Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</label>
            </value>
            <value>
                <fullName>Pacific/Auckland</fullName>
                <label>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</label>
            </value>
            <value>
                <fullName>Pacific/Fiji</fullName>
                <label>(GMT+12:00) Fiji Standard Time (Pacific/Fiji)</label>
            </value>
            <value>
                <fullName>Pacific/Funafuti</fullName>
                <label>(GMT+12:00) Tuvalu Time (Pacific/Funafuti)</label>
            </value>
            <value>
                <fullName>Pacific/Kwajalein</fullName>
                <label>(GMT+12:00) Marshall Islands Time (Pacific/Kwajalein)</label>
            </value>
            <value>
                <fullName>Pacific/Majuro</fullName>
                <label>(GMT+12:00) Marshall Islands Time (Pacific/Majuro)</label>
            </value>
            <value>
                <fullName>Pacific/Nauru</fullName>
                <label>(GMT+12:00) Nauru Time (Pacific/Nauru)</label>
            </value>
            <value>
                <fullName>Pacific/Tarawa</fullName>
                <label>(GMT+12:00) Gilbert Islands Time (Pacific/Tarawa)</label>
            </value>
            <value>
                <fullName>Pacific/Wake</fullName>
                <label>(GMT+12:00) Wake Island Time (Pacific/Wake)</label>
            </value>
            <value>
                <fullName>Pacific/Wallis</fullName>
                <label>(GMT+12:00) Wallis &amp; Futuna Time (Pacific/Wallis)</label>
            </value>
            <value>
                <fullName>Antarctica/Casey</fullName>
                <label>(GMT+11:00) Casey Time (Antarctica/Casey)</label>
            </value>
            <value>
                <fullName>Asia/Magadan</fullName>
                <label>(GMT+11:00) Magadan Standard Time (Asia/Magadan)</label>
            </value>
            <value>
                <fullName>Asia/Sakhalin</fullName>
                <label>(GMT+11:00) Sakhalin Standard Time (Asia/Sakhalin)</label>
            </value>
            <value>
                <fullName>Asia/Srednekolymsk</fullName>
                <label>(GMT+11:00) Magadan Standard Time (Asia/Srednekolymsk)</label>
            </value>
            <value>
                <fullName>Pacific/Bougainville</fullName>
                <label>(GMT+11:00) Bougainville Standard Time (Pacific/Bougainville)</label>
            </value>
            <value>
                <fullName>Pacific/Efate</fullName>
                <label>(GMT+11:00) Vanuatu Standard Time (Pacific/Efate)</label>
            </value>
            <value>
                <fullName>Pacific/Guadalcanal</fullName>
                <label>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</label>
            </value>
            <value>
                <fullName>Pacific/Kosrae</fullName>
                <label>(GMT+11:00) Kosrae Time (Pacific/Kosrae)</label>
            </value>
            <value>
                <fullName>Pacific/Norfolk</fullName>
                <label>(GMT+11:00) Norfolk Island Standard Time (Pacific/Norfolk)</label>
            </value>
            <value>
                <fullName>Pacific/Noumea</fullName>
                <label>(GMT+11:00) New Caledonia Standard Time (Pacific/Noumea)</label>
            </value>
            <value>
                <fullName>Pacific/Ponape</fullName>
                <label>(GMT+11:00) Ponape Time (Pacific/Ponape)</label>
            </value>
            <value>
                <fullName>Australia/Lord_Howe</fullName>
                <label>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>