force-app/main/default/objects/User__x/fields/UserPermissionsJigsawProspectingUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsJigsawProspectingUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsJigsawProspectingUser</externalDeveloperName>
    <label>Data.com User</label>
    <type>Checkbox</type>
</CustomField>