force-app/main/default/objects/User__x/fields/UserPermissionsKnowledgeUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsKnowledgeUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsKnowledgeUser</externalDeveloperName>
    <label>Knowledge User</label>
    <type>Checkbox</type>
</CustomField>