force-app/main/default/objects/User__x/fields/UserPermissionsSiteforceContributorUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsSiteforceContributorUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsSiteforceContributorUser</externalDeveloperName>
    <label>Site.com Contributor User</label>
    <type>Checkbox</type>
</CustomField>