force-app/main/default/objects/User__x/fields/UserPermissionsSiteforcePublisherUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsSiteforcePublisherUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsSiteforcePublisherUser</externalDeveloperName>
    <label>Site.com Publisher User</label>
    <type>Checkbox</type>
</CustomField>