force-app/main/default/objects/User__x/fields/UserPermissionsWorkDotComUserFeature__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsWorkDotComUserFeature__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsWorkDotComUserFeature</externalDeveloperName>
    <label>WDC User</label>
    <type>Checkbox</type>
</CustomField>