force-app/main/default/objects/User__x/fields/UserPreferencesHideLegacyRetirementModal__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideLegacyRetirementModal__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideLegacyRetirementModal</externalDeveloperName>
    <label>HideLegacyRetirementModal</label>
    <type>Checkbox</type>
</CustomField>