force-app/main/default/objects/User__x/fields/UserPreferencesJigsawListUser__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesJigsawListUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesJigsawListUser</externalDeveloperName>
    <label>JigsawListUser</label>
    <type>Checkbox</type>
</CustomField>