force-app/main/default/objects/User__x/fields/UserPreferencesReverseOpenActivitiesView__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesReverseOpenActivitiesView__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesReverseOpenActivitiesView</externalDeveloperName>
    <label>ReverseOpenActivitiesView</label>
    <type>Checkbox</type>
</CustomField>