force-app/main/default/objects/User__x/fields/UserPreferencesShowTerritoryTimeZoneShif__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowTerritoryTimeZoneShif__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowTerritoryTimeZoneShifts</externalDeveloperName>
    <label>ShowTerritoryTimeZoneShifts</label>
    <type>Checkbox</type>
</CustomField>